--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,43 +1,34 @@
 ---
 layout: default
 ---
-<article class="article-container">
-    <header class="article-header">
-        <h1 class="article-title">{{ page.title }}</h1>
-        <div class="article-meta">
-            <span class="post-date">
-                <i class="far fa-calendar-alt"></i>
-                {{ page.date | date: "%Y年%m月%d日" }}
-            </span>
-            {% if page.tags %}
-            <span class="post-tags">
-                <i class="fas fa-tags"></i>
-                {% for tag in page.tags %}
-                <a href="/tags#{{ tag }}" class="tag">{{ tag }}</a>
-                {% endfor %}
-            </span>
-            {% endif %}
+<article class="post-container">
+    <header class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+        <div class="post-meta">
+            发布于 {{ page.date | date: "%Y年%m月%d日" }}
+        </div>
+        <div class="tags">
+            {% for tag in page.tags %}
+            <span class="tag">{{ tag }}</span>
+            {% endfor %}
         </div>
     </header>
 
-    <div class="article-content">
+    <div class="post-content">
         {{ content }}
     </div>
 
-    <div class="article-footer">
-        <div class="article-navigation">
-            {% if page.previous %}
-            <a href="{{ page.previous.url }}" class="prev-post">
-                <span>上一篇</span>
-                {{ page.previous.title }}
-            </a>
-            {% endif %}
-            {% if page.next %}
-            <a href="{{ page.next.url }}" class="next-post">
-                <span>下一篇</span>
-                {{ page.next.title }}
-            </a>
-            {% endif %}
-        </div>
+    <div class="post-navigation">
+        {% if page.previous %}
+        <a href="{{ page.previous.url }}" class="prev-post">
+            上一篇：{{ page.previous.title }}
+        </a>
+        {% endif %}
+        
+        {% if page.next %}
+        <a href="{{ page.next.url }}" class="next-post">
+            下一篇：{{ page.next.title }}
+        </a>
+        {% endif %}
     </div>
 </article> 
